[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tiles/bricks/BrickTiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Connections/House_Garage_0.tres" type="Resource" id=2]
[ext_resource path="res://Maps/Garage/left_arm.png" type="Texture" id=3]
[ext_resource path="res://Maps/Garage/body.png" type="Texture" id=4]
[ext_resource path="res://Maps/Garage/left_leg.png" type="Texture" id=5]
[ext_resource path="res://Maps/Garage/right_arm.png" type="Texture" id=6]
[ext_resource path="res://Maps/Garage/head.png" type="Texture" id=7]
[ext_resource path="res://Maps/Garage/right_leg.png" type="Texture" id=8]
[ext_resource path="res://Maps/Garage/robot_complete.png" type="Texture" id=9]
[ext_resource path="res://Maps/Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://Maps/Garage/Garage.gd" type="Script" id=11]
[ext_resource path="res://Connections/LeftBranch_Garage_0.tres" type="Resource" id=12]
[ext_resource path="res://UI/ButtonsTheme.tres" type="Theme" id=13]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Robot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "boot_robot"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Robot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Garage" type="Node2D"]
script = ExtResource( 11 )
pause_timer = true

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -16, 0 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 256, 160 )

[node name="BrickTiles" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 2, 65535, 0, 65536, 0, 0, 65537, 1, 0, 65541, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 65542, 14, 0, 65537, 15, 0, 65538, 131071, 0, 65536, 65536, 0, 65541, 65537, 0, 131074, 65549, 0, 131072, 65550, 0, 65542, 65551, 0, 65538, 196607, 0, 65540, 131072, 0, 131074, 131086, 0, 131072, 131087, 0, 65543, 262143, 0, 65539, 196623, 0, 65539, 327679, 0, 65539, 262145, 0, 196611, 262147, 0, 196611, 262149, 0, 196611, 262153, 0, 196611, 262155, 0, 196611, 262157, 0, 196611, 262159, 0, 131075, 393215, 0, 65539, 458751, 0, 131075, 524292, 0, 0, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 2, 655359, 0, 0, 589824, 0, 1, 589825, 0, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 131078, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 131077, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 2, 720895, 0, 131072, 655360, 0, 131073, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 131073, 655372, 0, 131073, 655373, 0, 131073, 655374, 0, 131073, 655375, 0, 131074 )

[node name="RightArmCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 69, 41 )

[node name="RightArm" type="Sprite" parent="RightArmCoords"]
texture = ExtResource( 6 )
centered = false

[node name="LeftArmCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 49, 41 )

[node name="LeftArm" type="Sprite" parent="LeftArmCoords"]
texture = ExtResource( 3 )
centered = false

[node name="HeadCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 11, 52 )

[node name="Head" type="Sprite" parent="HeadCoords"]
texture = ExtResource( 7 )
centered = false
hframes = 3

[node name="BodyCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 139, 45 )

[node name="Body" type="Sprite" parent="BodyCoords"]
texture = ExtResource( 4 )
centered = false

[node name="LeftLegCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 173, 38 )

[node name="LeftLeg" type="Sprite" parent="LeftLegCoords"]
texture = ExtResource( 5 )
centered = false

[node name="RightLegCoords" type="Position2D" parent="."]
visible = false
position = Vector2( 201, 38 )

[node name="RightLeg" type="Sprite" parent="RightLegCoords"]
texture = ExtResource( 8 )
centered = false

[node name="Robot" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 128 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
offset = Vector2( 0, -12 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.25
anims/RESET = SubResource( 1 )
anims/boot_robot = SubResource( 2 )

[node name="Door" parent="." instance=ExtResource( 10 )]
position = Vector2( 248, 128 )
connection = ExtResource( 2 )
new_map_path = "res://Maps/House/House.tscn"

[node name="Door2" parent="." instance=ExtResource( 10 )]
position = Vector2( -8, 128 )
scale = Vector2( -1, 1 )
connection = ExtResource( 12 )
new_map_path = "res://Maps/LeftBranch.tscn"

[node name="DefaultPlayerPosition" type="Position2D" parent="."]
position = Vector2( 120, 72 )
scale = Vector2( -1.38929, -1.62238 )

[node name="AllPartsFound" type="Area2D" parent="."]
visible = false
position = Vector2( 120, 93 )
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPartsFound"]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="AllPartsFound"]
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 11.0
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.0196078, 0.121569, 0.223529, 1 )
text = "?"
align = 1
valign = 1

[node name="CurtainTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="AllPartsFound" to="." method="_on_AllPartsFound_body_entered"]
[connection signal="timeout" from="CurtainTimer" to="." method="_on_CurtainTimer_timeout"]
